--- a/Kiwi/res/layout/main.xml
+++ b/Kiwi/res/layout/main.xml
@@ -10,5 +10,6 @@
     android:text="@string/hello"
     />
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ist" android:text="@string/ist"></TextView>
-<TextView android:text="@+id/TextView01" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+<TextView android:text="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/wert1"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/wert1"></TextView>
+
 </LinearLayout>
