--- a/Kiwi/res/layout/main.xml
+++ b/Kiwi/res/layout/main.xml
@@ -10,6 +10,7 @@
     android:text="@string/hello"
     />
 
-<TextView android:text="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/wert1"></TextView>
+<TextView android:text="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/conversion1"></TextView>
+<TextView android:text="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/conversion2"></TextView>
 
 </LinearLayout>
